# pipewire-manager-poll-server

./: Cargo.toml  README.md  build.rs  rust-analyzer.toml
src/: main.rs  pipewire.rs  state.rs
