[package]
name = "pipewire-manager-poll-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
axum-extra = "0.12.6"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
