[package]
name = "pipewire-manager-poll-server"
version = "0.1.0"
edition = "2024"
authors = ["Cristian A. Enguídanos Nebot <cristian.enguidanos.nebot@gmail.com>"]
readme = "README.md"
repository = "https://github.com/enguidanos-soluciones-web/pipewire-manager-poll-server"
license = "LGPL-2.1-only"
keywords = ["audio", "pipewire", "jack", "wireplumber"]
categories = ["config", "hardware-support", "multimedia::audio", "web-programming::http-server"]
publish = false


[dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"

[build-dependencies]
pkg-config = "0.3.33"
semver = "1.0.28"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [ "cfg(pw_v1_0)" ] }
